# hermes

./: .gitignore  README.md  hermes.spec  pyproject.toml
.agent/: AGENTS.md
.agent/docs/: BUGS.md  CODE_PATTERNS.md  PRD-v1.0.md  PRD-v1.1.md
src/hermes/: __init__.py  __main__.py  cli.py
src/hermes/core/: __init__.py  config.py  crowdin_api.py  crowdin_upload_api.py  file_operations.py
src/hermes/tui/: __init__.py  app.py  hermes.tcss
src/hermes/tui/screens/: __init__.py  download.py  main_menu.py  settings.py  upload.py
